# Purdue-AONN

./: README.md  environment.yml  pyproject.toml
notebooks/: Comparison Analytical vs Numerical .ipynb  DB_MATLAB.asv  Doppler_Final_Updated.ipynb  EIT_Doppler-Broadened.ipynb  EIT_DopplerBroadened_Final.ipynb  EIT_DopplerBroadened_WeakProbe_Final.ipynb  EIT_DopplerBroadened_WeakProbe_Final_Paper_Version.ipynb  EIT_HotAtomCase_Dallas.ipynb  EIT_LifeTimeBroadened_Final.ipynb  Ideal_Case_Analytical_Solution_FINAL.ipynb  LB_Analytical_Solutions_Without_Wave_Prop.ipynb  LB_Code_Verification.ipynb  LB_GeneralCase.ipynb  LB_MATLAB.m  LB_Multi_Threading.py  LB_Neural_Network_Testing.ipynb  Numerical Solution1 RK4.py  Red Pitaya Data Collection.ipynb  Test Hadiseh  (1).ipynb  Test Single Omegas.ipynb  gsw_testing.ipynb  redpitaya_acquirer.py  redpitaya_scpi.py  simple_nn.ckpt  simple_nn_relu.ckpt  simple_nn_resized.ckpt
src/purdue_aonn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/slm_gsw/: GS_algorithm2.py  GS_algorithm_first_iteration.py  beam_locator.py  dcam.py  dcam_live_capturing.py
